--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^13.14.2",
+    "cypress-iframe": "^1.0.1",
     "typescript": "^5.6.2"
   }
 }
