--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "cypress": "^13.14.2",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.13"
   }
 }
