--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "cypress": "^13.14.2",
     "cypress-iframe": "^1.0.1",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "ts-md5": "^1.3.1"
   }
 }
